# image_processor

./: README.md
image_processor/: BMP.cpp  BMP.h  CMakeLists.txt  Image.cpp  Image.h  Parsing.cpp  Parsing.h  RGB.cpp  RGB.h  filter.h  image_processor.cpp
image_processor/filters/: Blur.cpp  Blur.h  Crop.cpp  Crop.h  CustomFilter.cpp  CustomFilter.h  EdgeDetection.cpp  EdgeDetection.h  Grayscale.cpp  Grayscale.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h
